# cork

./: Cargo.toml  README.md
.github/workflows/: cork-sample-test.yml
examples/addlib/: Cork.toml
examples/addlib/src/: add.c
examples/mathproj/: Cork.toml
examples/mathproj/src/: main.c  subtract.c
examples/mathproj/tests/: test_main.c
src/: build.rs  clean.rs  cli.rs  main.rs  project.rs
