[package]
name = "cork"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }  # CLI parsing
toml = "0.8"                              # For config files
serde = { version = "1.0", features = ["derive"] }  # Serialization
serde_derive = "1.0"                      # Derive macros for serde
fs_extra = "1.3"                          # File system utilities
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.17"
